test-cases/valid/reject/no_main.ul
// While valid according to the grammar, this file has no main() function
// and is therefore invalid.

void foo () {}
